--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 ./wp-config.php
 wp-config.php
 wp-config.php*
+wp-content/uploads/wc-logs/*
+./wp-content/uploads/wc-logs/*
+.idea
+.idea/*
+.idea/workspace.xml
